--- a/estilos/style.css
+++ b/estilos/style.css
@@ -68,7 +68,7 @@ header > p {
     margin: auto;
     padding-right: 10px;
     padding-left: 10px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 nav {
